--- a/src/style.scss
+++ b/src/style.scss
@@ -21,9 +21,12 @@ button {
 
 .app {
   font-size: 20px;
+  margin-block: 20px;
+  margin-block-end: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
 }
 
 .text-green {
